<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    tools:context=".activities.StartUpActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_gravity="center">

        <!-- App Logo -->
        <androidx.cardview.widget.CardView
            android:layout_width="150dp"
            android:layout_height="150dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginHorizontal="5dp"
            android:layout_marginBottom="32dp">

            <ImageView
                android:id="@+id/image_logo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/logo" />

        </androidx.cardview.widget.CardView>

        <!-- App Name -->
        <TextView
            android:id="@+id/text_app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/app_name"
            android:textSize="24sp"
            android:textStyle="bold" />

        <!-- App Slogan or Description -->
        <TextView
            android:id="@+id/text_app_slogan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:gravity="center"
            android:text="@string/app_moto"
            android:textSize="18sp" />

        <!-- Get Started Button -->
        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardElevation="5dp"
            app:cardCornerRadius="10dp"
            android:layout_margin="10dp"
            app:cardBackgroundColor="@color/button_color">

            <Button
                android:id="@+id/button_get_started"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnLetsGo"
                android:paddingHorizontal="20dp"
                android:textColor="@color/white"
                android:backgroundTint="@color/button_color"/>

        </androidx.cardview.widget.CardView>

    </androidx.appcompat.widget.LinearLayoutCompat>

</ScrollView>