<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.about.AboutActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/button_color"
        android:orientation="horizontal">

            <ImageView
                android:id="@+id/image_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/baseline_arrow_back_ios_new_24"
                app:tint="@color/white"
                android:padding="15dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:text="@string/about"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:gravity="center">

            <!-- App Logo -->
            <androidx.cardview.widget.CardView
                android:layout_width="150dp"
                android:layout_height="150dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginHorizontal="5dp"
                android:layout_marginBottom="32dp">

                <ImageView
                    android:id="@+id/image_logo"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/logo" />

            </androidx.cardview.widget.CardView>

            <!-- App Name -->
            <TextView
                android:id="@+id/text_app_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="16dp"
                android:text="@string/app_name"
                android:textColor="@color/button_color"
                android:textSize="24sp"
                android:textStyle="bold" />

            <!-- App Version -->
            <TextView
                android:id="@+id/text_app_version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/verInfo"
                android:textColor="@color/button_color"
                android:textSize="18sp"
                android:layout_gravity="center"
                android:layout_marginBottom="22dp" />

            <!-- About Description -->

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="10dp"
                app:cardElevation="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginHorizontal="15dp"
                android:layout_marginBottom="5dp">

                <TextView
                    android:id="@+id/text_about_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="15dp"
                    android:textColor="@color/button_color"
                    android:text="@string/license"
                    android:textAlignment="center"
                    android:layout_gravity="center" />

            </androidx.cardview.widget.CardView>


        </androidx.appcompat.widget.LinearLayoutCompat>

    </ScrollView>

</androidx.appcompat.widget.LinearLayoutCompat>